force-app/main/default/objects/Historique_de_poste__c/Historique_de_poste__c.object-meta.xml
<CustomObject>
    <label>Historique de poste</label>
    <nameField>
        <label>Nom de Historique de poste</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Historique de postes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>