force-app/main/default/objects/Historique_de_poste__c/fields/Dbut__c.field-meta.xml
<CustomField>
    <fullName>Dbut__c</fullName>
    <label>Début</label>
    <type>Date</type>
</CustomField>