force-app/main/default/objects/Historique_de_poste__c/fields/Societe__c.field-meta.xml
<CustomField>
    <fullName>Societe__c</fullName>
    <label>Société</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Historique de postes</relationshipLabel>
    <relationshipName>Historique_de_postes</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>