force-app/main/default/objects/Historique_de_poste__c/fields/Socit__c.field-meta.xml
<CustomField>
    <fullName>Socit__c</fullName>
    <label>Société</label>
    <length>255</length>
    <type>Text</type>
</CustomField>